<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/nameText"
        android:layout_width="295dp"
        android:layout_height="76dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/hint_connexion"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="275dp"
        android:layout_height="277dp"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/content_description_casino"
        android:src="@drawable/casino"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnConnexion"
        android:layout_width="258dp"
        android:layout_height="63dp"
        android:layout_marginTop="64dp"
        android:text="@string/btn_connexion"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />
</androidx.constraintlayout.widget.ConstraintLayout>